# index.js
@@ -1,10 +1,12 @@
 require('dotenv').config();
 const express = require('express');
-const characterRoute = require('./src/routes/personagem.router');
+const cors = require('cors');
+const connecteToDatabase = require('./src/database/database');
+const characterRoute = require('./src/routes/characters.router');
 const userRoute = require('./src/routes/users.route');
 const authRoute = require('./src/routes/auth.route');
-const connecteToDatabase = require('./src/database/database');
-const cors = require('cors');
+const swaggerRoute = require('./src/routes/swaggwe.route');
+
 const port = process.env.PORT || 3001;
 const app = express();
 
@@ -12,8 +14,10 @@ connecteToDatabase();
 
 app.use(express.json());
 app.use(cors());
-app.use('/characters', characterRoute);
-app.use('/users', userRoute);
-app.use('/auth', authRoute);
+
+app.use('/', characterRoute);
+app.use('/', userRoute);
+app.use('/', authRoute);
+app.use('/', swaggerRoute);
 
 app.listen(port, () => { console.log(`Servidor rodando na porta :${port}`) });
