# src/routes/auth.route.js
@@ -2,6 +2,6 @@ const router = require('express').Router();
 
 const authController = require('../controllers/auth.controller');
 
-router.post('/login', authController.loginController);
+router.post('/auth/login', authController.loginController);
 
 module.exports = router;
